// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <List
    dividerStyle="none"
    paddingStyle="none"
    role="none"
  >
    <ul
      className="list orion-fusion-theme"
      role="list"
    />
  </List>
</ThemeContextProvider>
`;

exports[`should render with ariaDescribedBy 1`] = `
<div>
  <p
    id="list-help"
  >
     Navigate this list using the arrow keys. 
  </p>
  <List
    ariaDescribedBy="list-help"
    dividerStyle="none"
    paddingStyle="none"
    role="none"
  >
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="123"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="124"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="125"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="126"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="127"
    />
  </List>
</div>
`;

exports[`should render with ariaDescription 1`] = `
<ul
  aria-description="Navigate this list using the arrow keys."
  className="list"
  role="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with bottom only divided items 1`] = `
<ul
  className="list divider-bottom-only"
  role="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with items 1`] = `
<ul
  className="list"
  role="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with no items 1`] = `
<ul
  className="list"
  role="list"
/>
`;

exports[`should render with standard divided items 1`] = `
<ul
  className="list divider-standard"
  role="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with standard padded items 1`] = `
<ul
  className="list padding-standard"
  role="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with thin padded items 1`] = `
<ul
  className="list padding-compact"
  role="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;
